--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -31,9 +31,6 @@
     border: 0.5px solid black;
     border-radius: 15px;
     padding: 5px;
-    width: 80%;
-    margin: auto;
-    text-align: center;
 }
 
 .wijzers:hover {
@@ -76,6 +73,11 @@
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     border-radius: 10px;
 
+}
+
+.reviewText {
+    width: 80%;
+    margin: auto;
 }
 
 .review-tab{
@@ -260,6 +262,9 @@
 @media (max-width: 480px) {
     .reviewColumn {
         width: 100%;
+        p.reviewText {
+            text-align: center;
+        }
         h2.review-header {
             font-size: 1.5em;
         }
