--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -102,7 +102,7 @@
     align-items: center;
     width: 100%;
     max-width: 200px;
-
+  text-align: end;
 }
 
 .wijzer-grn,.boxText {
@@ -180,6 +180,7 @@
 .boxText {
   width: 80%;
   margin: auto;
+  text-align: center;
 }
 
 #withdrawButton {
@@ -371,6 +372,21 @@
 
 }
 @media (max-width: 480px) {
+  .dashboard-content {
+    margin-top: 2em !important;
+  }
+  .dashboard-section {
+    flex-direction: column !important;
+    justify-content: space-between;
+    gap: 2em;
+    .box {
+      width: 100%;
+      height: 10em;
+    }
+  }
+  .wijzer-grn {
+    text-align: center;
+  }
   .selector {
     width: auto;
   }
