--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -134,7 +134,65 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 15em;
-
+  .dashboard-1 {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    .dashboard-head {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 1.5em;
+      .refresh-btn {
+        padding: 0.5em;
+        margin: 0;
+        margin-top: 5%;
+        height: 5vh;
+      }
+    }
+    .dashboard-card {
+      height: 35vh;
+      width: 17vw;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 0.5em;
+      position: relative;
+      .accommodation-text {
+        padding: 0.25em;
+        width: 80%;
+        background-color: black;
+        backdrop-filter: blur(10px);
+        border-radius: 0.5em;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        justify-self: center;
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        .accommodation-title {
+          color: white;
+          margin: 0;
+          font-size: 0.75em;
+          background-color: black;
+        }
+        .accommodation-location {
+          color: white;
+          font-size: 0.6em;
+          margin-top: 1%;
+        }
+      }
+      .accommodation-img {
+        max-height: 70%;
+        max-width: none;
+        border-radius: 0.5em 0.5em 0 0;
+        padding: 0;
+        align-self: center;
+        width: 100%;
+        height: 70%;
+      }
+    }
+  }
 }
 
 .boxColumns {
