Host dashboard new design completed

--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -61,17 +61,20 @@
   grid-template-columns: 200px auto;
 }
 
-
-.wijzer {
+.wijzer{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   cursor: pointer;
   margin-bottom: 10px;
   align-items: center;
-  width: 100%;
-  max-width: 200px;
-
+  width: 10vw;
+  font-size: 0.75em;
+  text-align: center;
+  img {
+    width: 15%;
+    height: auto;
+  }
 }
 
 .wijzer:hover {
@@ -95,14 +98,14 @@
 
 .wijzer-grn {
   display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    cursor: pointer;
-    margin-bottom: 10px;
-    align-items: center;
-    width: 100%;
-    max-width: 200px;
+  flex-direction: row;
+  justify-content: space-between;
+  cursor: pointer;
+  margin-bottom: 10px;
+  align-items: center;
   text-align: end;
+  width: 10vw;
+  font-size: 0.75em;
 }
 
 .wijzer-grn,.boxText {
@@ -117,16 +120,25 @@
 }
 
 .stripe-icon {
-  height: 2.5rem;
-  width: 2.5rem;
-  border-radius: 15px;
-  border: 1.75px solid black;
+  height: auto;
+  width: 1.5vw;
+  border-radius: 0.5em;
+  border: 0.1em solid black;
+  margin-left: -0.25em;
 }
 
 .stripe-icon-div {
   padding-left: 0.25rem;
 }
-
+.dashboard-header {
+  display: flex;
+  flex-direction: row;
+}
+.welcome-msg {
+  padding: 0;
+  margin-left: 15%;
+  font-size: 2em;
+}
 .contentContainer {
   width: 100%;
   display: flex;
@@ -138,6 +150,7 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
+    animation: fade-up 2s;
     .dashboard-head {
       display: flex;
       flex-direction: row;
@@ -192,6 +205,21 @@
         height: 70%;
       }
     }
+  }
+  .dashboard-2 {
+    animation: fade-up 4s;
+  }
+}
+
+@keyframes fade-up {
+  0% {
+    opacity: 0;
+    transform: translateY(30px) scale(0.5);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px) scale(1);
   }
 }
 
@@ -414,10 +442,6 @@
     display: grid;
     grid-template-columns: auto auto;
     justify-items: center;
-  }
-
-  .wijzer {
-    width: 90%;
   }
 
   .accommodation-tab {
