--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -455,46 +455,15 @@
 
 }
 @media (max-width: 480px) {
-  .dashboard-content {
-    margin-top: 2em !important;
-  }
-  .dashboard-section {
-    flex-direction: column !important;
-    justify-content: space-between;
-    gap: 2em;
-    .box {
-      width: 100%;
-      height: 10em;
-    }
-  }
-  .wijzer-grn {
-    text-align: center;
-  }
-  .selector {
-    width: auto;
-  }
-  .locationBox {
-    option {
-      font-size: 0.5em;
+  .dashboard-header {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    .welcome-msg {
       padding: 0;
-      border: none;
-      border-radius: 0;
-      margin:0;
-      display:block;
-      width: 10%;
-      cursor: pointer;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+      margin: 0;
+      font-size: 1.5em;
     }
-  }
-  select.locationBox {
-    width: auto;
-    padding: 0.75em;
-    margin: 1em;
-  }
-  div.alert-message {
-    margin-top: 2em;
-    margin-bottom: 2em;
   }
 }
