More styling for enlist

--- a/web/src/components/landingpage/onboardingHost.css
+++ b/web/src/components/landingpage/onboardingHost.css
@@ -96,6 +96,11 @@
   flex-wrap: wrap;
   margin: auto;
 }
+.listing-calendar {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+}
 .loading {
   display: flex;
   flex-direction: column;
