--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -139,11 +139,13 @@
   border: none;
   padding-top: 0.4rem;
   text-align: left;
-  margin-bottom: 0rem;
+  transform: translateY(-20%);
   width: 85%;
   height: 1.5rem;
 }
-
+.suggestion-item:hover {
+  border-radius: 10px;
+}
 .searchBar:focus {
   outline: none;
 }
