--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -105,6 +105,24 @@
 .bar>div:nth-of-type(1)::before {
   background: transparent;
 }
+.bar>div:nth-of-type(3)::before {
+  background: solid;
+  transform: translateY(-40%);
+}
+.bar>div:nth-of-type(4)::before {
+  background: solid;
+  height: 56%;
+  transform: translateY(-43%);
+}
+
+
+.DatePicker__calendarContainer {
+  position: absolute;
+  top: calc(50% + 10px);
+  left: 60%;
+  transform: translateX(-50%);
+}
+
 
 .searchbar-button {
   display: inline-block;
@@ -547,6 +565,15 @@
 
   .bar>div::before {
     background: transparent;
+  }
+  .DatePicker__calendarContainer {
+    position: absolute;
+    top: calc(-350% + 0px);
+    left: 8%;
+    transform: translateX(-50%);
+  }
+  .DatePicker__calendarArrow {
+    border-color: transparent;
   }
 
   .ClearButton {
