--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -217,22 +217,41 @@
 }
 
 .guest-dropdown {
-  display: none;
+  display: none; 
   position: absolute;
   top: calc(100% + 0.625rem);
-  /* left: 77%; is een tijdelijke oplossing omdat het zorgt voor overflow buiten de schermen dus moet later
-  verplaatst worden */
   left: 57%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(0.95); 
   background: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   border-radius: 1.5625rem;
   padding: 1.5625rem;
-  z-index: 9999;
+  z-index: 999;
   width: 23.125rem;
   min-width: 15.625rem;
   box-sizing: border-box;
   cursor: auto;
+}
+
+.guest-dropdown.active {
+  display: block; 
+  opacity: 1; 
+  transform: translateX(-50%) scale(1); 
+}
+
+@keyframes dropdownFadeIn {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%) scale(0.80);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(-50%) scale(1);
+  }
+}
+
+.guest-dropdown.active {
+  animation: dropdownFadeIn 0.3s ease;
 }
 
 .button-section.active .guest-dropdown {
@@ -489,7 +508,7 @@
 
 @media (max-width: 730px) {
 
-  .accommodation,
+  
   .button-section,
   .searchInputContainer,
   .check-in {
@@ -508,16 +527,20 @@
     border-radius: 0.8rem;
     width: 100%;
     margin-bottom: 0.4rem;
+    height: 2.5rem;
   }
 
   .searchBar {
     background: none;
     border: none;
     padding-bottom: 0.4rem;
-    text-align: left;
+    text-align: center;
     margin-bottom: 0rem;
-    width: 90%;
-    height: 1.5rem;
+    width: 100%;
+    height: 1.7rem;
+  }
+  .searchBar::placeholder {
+    transform: translateX(38%);
   }
 
   .button-section {
@@ -528,10 +551,12 @@
     border: none;
     height: 3rem;
   }
+  .searchInputContainer{
+    height: 2.8rem;
+  }
 
   .searchTitleGuest {
-    text-align: left;
-    transform: translateX(-200%);
+    transform: translateX(-30%);
   }
 
   .guestP {
@@ -540,8 +565,7 @@
   }
 
   .searchTitle {
-    text-align: left;
-    margin-left: 2rem;
+    transform: translateX(32%);
   }
 
   .searchTitleCenterAcco {
@@ -555,18 +579,21 @@
 
   .input-calendar {
     border: none;
-    text-align: center;
-    width: auto;
-    transform: translate(-40%, 0px);
+    text-align: left;
+    width: 70%;
+    transform: translate(-20%, 0px);
     margin-top: 2rem;
-    height: 2rem;
-  }
-
-  .DatePicker__input {
-    border: solid;
-    transform: translateX(-115%);
-    width: 100%;
     height: 3rem;
+  }
+  .input-calendar::placeholder{
+    transform: translateX(50%);
+  }
+/* tijdelijke oplossing het is nog niet responsive */
+  .DatePicker__input {
+    border: none;
+    transform: translateX(-40%) translateY(-90%);
+    width: 200%;
+    
 
   }
 
@@ -584,7 +611,7 @@
 
   .DatePicker__calendarContainer {
     position: absolute;
-    top: calc(-350% + 0px);
+    top: calc(-700% + 0px);
     left: 8%;
     transform: translateX(-50%);
   }
