--- a/web/src/components/landingpage/onboardingHost.css
+++ b/web/src/components/landingpage/onboardingHost.css
@@ -31,6 +31,13 @@
   object-fit: cover;
 }
 
+.check-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  gap: 2em;
+  flex-wrap: wrap;
+}
 .delete-button {
   position: absolute;
   top: 5px;
@@ -68,7 +75,14 @@
   width: 100%;
   height: 100%;
 }
-
+.slider-bar {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+  .priceSlider {
+    width: 40vw;
+  }
+}
 .flex-row {
   width: 100%;
   flex-wrap: wrap;
