Web: payments worden gepakt voor de guest en getoond. Ook een utils functie gemaakt voor cognito attribute fetching.

--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -155,7 +155,8 @@
 .content {
     padding: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    
 }
 
 .leftContent {
