--- a/web/src/components/booking/listing.css
+++ b/web/src/components/booking/listing.css
@@ -198,7 +198,14 @@
   padding-top: 10px;
   margin-top: 10px;
 }
-
+.listing-reviews {
+  display: flex;
+  flex-direction: column;
+}
+.review-card {
+  padding: 1.5em;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 .error {
   border: 1px solid red !important;
 }
