Laatste puntjes op de i

--- a/web/src/components/booking/bookingoverview.css
+++ b/web/src/components/booking/bookingoverview.css
@@ -92,7 +92,7 @@ p {
 .confirm-pay-button {
     width: 100%;
     padding: 15px;
-    background-color: #4caf50;
+    background-color: #0D9813;
     color: #ffffff;
     border: none;
     border-radius: 4px;
