--- a/web/src/components/base/Register.css
+++ b/web/src/components/base/Register.css
@@ -96,3 +96,33 @@ label {
     font-size: 16px;
     margin-top: 5px;
 }
+
+.signOutButton {
+    background-color: #003366;
+    color: #fff;
+    height: 45px;
+    width: 150px;
+    border-radius: 5px;
+    box-shadow: none;
+    padding: 10px;
+    margin: 0 10px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+}
+
+.signOutButton:hover {
+    background-color: #335e89;
+    cursor: pointer;
+    transition: background-color .3s ease-out;
+}
+
+.signOutDiv {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding-bottom: 4%;
+    padding-top: 4%;
+}
