--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -11,16 +11,6 @@
   height: 3.4375rem;
   font-size: 0.6rem;
 }
-
-.searchTitleCenterAcco {
-  color: #0D9813;
-  font-size: 0.7rem;
-  font-family: 'Kanit', sans-serif;
-  font-weight: 700;
-  padding: 0.75;
-
-}
-
 .bar .searchInputContainer {
   display: flex;
   flex-direction: column;
@@ -51,8 +41,7 @@
   color: #0D9813;
   font-size: 1rem;
   font-family: 'Kanit', sans-serif;
-  font-weight: 600;
-  /* transform: translateY(45%); */
+  font-weight: 500;
 }
 
 .check-in {
@@ -85,7 +74,7 @@
 .bar>div::before {
   position: absolute;
   content: "";
-  left: 0.45%;
+  left: -1.85%;
   top: 50%;
   transform: translateY(-50%);
   width: 0.05625rem;
@@ -111,9 +100,11 @@
 
 .DatePicker__calendarContainer {
   position: absolute;
-  top: calc(10% + 10px);
+  top: calc(10% + -0.1rem);
   left: 60%;
   transform: translateX(-50%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  border-radius: 0.5rem;
 }
 
 
@@ -172,9 +163,9 @@
 .searchBar::placeholder {
   color: #0D9813;
   font-family: 'Kanit', sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 1rem;
-  transform: translateX(20%);
+  transform: translateX(18%);
 }
 
 .button-section {
@@ -221,9 +212,7 @@
   min-width: 15.625rem;
   box-sizing: border-box;
   cursor: auto;
-  
 }
-
 .guest-dropdown.active {
   display: block; 
   opacity: 1; 
@@ -253,8 +242,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 1.25rem;
-  padding: 0.625rem 0;
+  margin-top: 0.40rem;
+  /* padding: 0.625rem 0; */
   border-bottom: 1px solid #0a770f;
 }
 
@@ -267,10 +256,13 @@
   color: #0a770f;
   text-align: left;
 }
-
+.selected {
+  color: green;
+}
 .guestDescription {
-  font-size: 0.625rem;
+  font-size: 0.7rem;
   color: #666;
+  text-align: left;
 }
 
 .guestCounter .controls {
@@ -317,7 +309,7 @@
   position: absolute;
   color: #0D9813;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 500;
   margin-top: 1rem;
 
 }
@@ -330,7 +322,7 @@
   text-align: left;
   font-weight: 500;
   color: #000;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   margin-top: 1rem;
 }
 
@@ -341,6 +333,13 @@
 
 .responsive-calendar {
   font-size: 11px !important;
+}
+.DatePicker__calendarArrow {
+  display: none;
+}
+.Calendar__monthSelector.-open,
+.Calendar__yearSelector.-open {
+  transform: translateY(0);
 }
 
 @media (max-width: 768px) {
@@ -468,12 +467,12 @@
 }
 
 .Calendar__monthSelectorItemText {
-  border: none;
-  padding: 0.4em 0.4em;
-  border-radius: 8.5px;
   font-size: 0.8em;
-  min-width: 70%;
-  transition: 0.3s;
+}
+.Calendar__sectionWrapper {
+  position: relative;
+  min-height: 22.8em;
+  overflow: hidden;
 }
 
 @media (max-width: 730px) {
@@ -485,12 +484,10 @@
 }
 
 @media (max-width: 730px) {
-
-  /* Verander de .bar-indeling naar een kolomlay-out */
   .bar {
     border: 2px solid #0a770f;
     width: 110%;
-    transform: translateX(-10%);
+    transform: translateX(-5%);
     margin: auto;
     box-shadow: 0 0 5px hsl(0 0% 68%);
     border-radius: 0.875rem;
@@ -623,11 +620,13 @@
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
+  .search-icon {
+    margin-right: 12px;
+    transform: translateY(15%);
+  }
 }
 
-.search-icon {
-  margin-right: 8px;
-}
+
 
 .search-text {
   display: none;
