--- a/web/src/components/hostdashboard/HostReservations.css
+++ b/web/src/components/hostdashboard/HostReservations.css
@@ -46,6 +46,7 @@
         max-height: 70%;
         margin-top: 10%;
         width: 50vw;
+        gap: 1em;
         .reservation-item {
             display: flex;
             flex-direction: row;
@@ -55,6 +56,9 @@
             padding: 0.75em;
             border: 1px solid black;
             border-radius: 2em;
+            .check-box {
+                width: 1.5vw;
+            }
         }
     }
     .btn-box {
