--- a/web/src/components/hostdashboard/HostReservations.css
+++ b/web/src/components/hostdashboard/HostReservations.css
@@ -65,6 +65,11 @@
                 display: flex;
                 flex-direction: row;
             }
+            .reservation-link:hover {
+                color: dodgerblue;
+                text-decoration: underline;
+                cursor: pointer;
+            }
         }
     }
     .btn-box {
