--- a/web/src/components/landingpage/Faq.css
+++ b/web/src/components/landingpage/Faq.css
@@ -14,6 +14,16 @@
   font-weight: bolder;
 }
 
+.category{
+  color: white;
+  border-radius: 8px;
+  background-color: #0D9813;
+  border: 2px solid var(--primary-color);
+  padding: 10px 20px;
+  margin: 30px 20px;
+  cursor: pointer;
+}
+
 .faq-box {
   width: 50%;
   border: 2px solid var(--primary-color);
