--- a/web/src/components/chat/chat.css
+++ b/web/src/components/chat/chat.css
@@ -1,13 +1,10 @@
 .chat{
-    height: 100vh;
+    height: 60vh;
     width: 100%;
     background: white;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    flex-direction: column;
-    gap: 0rem;
-    padding: 3rem;
  
 }
 
@@ -41,7 +38,7 @@
 
 .chat__message{
     height: 100%;
-    width: 50%;
+    width: 60%;
     /* display: flex;
     flex-direction: column;
     justify-content: center;
